# OpenLauncherProyect

./: Cargo.toml  FreeLauncher.pyproj  FreeLauncher.sln  OpenLauncherProyect.spec  README.md  build.py  funciones.py  interfaz.py  main.py  prueba para ver online.txt
Window/: Componentes.py  GestorMods.py  Main.py  Perfiles.py  Utilidades.py  VentanaInstalar.py
