[package]
name = "free_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI - reemplaza tkinter
eframe = "0.26.0"  # egui framework para interfaz gráfica
egui = "0.26.0"

# HTTP requests - reemplaza requests
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
dirs = "5.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Process management - reemplaza subprocess
tokio = { version = "1.0", features = ["process"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] } 